# TrainData-Download-T8

./: .gitignore  ANIMA_DATASET_SOFTWARE_PLAN.md  MANGA_DATASET_PLAN.md  README.md  SKILL.md  features.json  launch.bat  launch_cli.bat  package-lock.json  package.json  pyproject.toml  启动贞贞的训练集下载器.vbs
electron/: main.js
examples/: url_list.txt
sources/: registry.yaml
sources/catalogs/: base.json  generators.json
sources/providers/: providers.json
src/anima_dataset/: __init__.py  catalog.py  cli.py  download.py  extract.py  gui_server.py  models.py  paths.py  storage.py
src/anima_dataset/plugins/: __init__.py  booru.py  github_release.py  huggingface.py  internet_archive.py  kaggle.py  wikimedia.py  zenodo.py
src/anima_dataset/web/: app.js  index.html  presets.js  styles.css
tools/: backend_entry.py  build_backend.ps1  launch_gui.ps1  launch_gui_hidden.vbs  launcher.ps1  python.ps1
